--- a/source/index.html
+++ b/source/index.html
@@ -177,13 +177,120 @@
             </div>
           </div>
           <p class="promo__description">Ежегодные соревнования по CrossFit</p>
-          <a class="promo__link">Заполнить заявку</a>
+          <a class="promo__link" href="claim.html">Заполнить заявку</a>
         </div>
         <picture>
           <source media="(min-width: 1200px)" srcset="img/promo-foto-big.png">
           <source media="(min-width: 768px)" srcset="img/promo-foto-medium.png">
           <img class="promo__image" src="img/promo-foto-small.png" alt="Фото какого-то сумашедшего">
         </picture>
+      </div>
+    </section>
+    <section class="trainers">
+      <div class="trainers__container">
+        <h2 class="trainers__title">Тренеры</h2>
+        <ul class="trainers__list list-teachers">
+          <li class="list-teachers__item list-teachers__item--one">
+            <h3 class="list-teachers__item-title">Анна Павлова</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit </li>
+                <li class="list-teachers__item-info">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item list-teachers__item--two" >
+            <h3 class="list-teachers__item-title">Алексей Лавров</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit </li>
+                <li class="list-teachers__item-info">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item list-teachers__item--three">
+            <h3 class="list-teachers__item-title">Александр Пашков</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit </li>
+                <li class="list-teachers__item-info">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item list-teachers__item--four">
+            <h3 class="list-teachers__item-title">Мария Кетова</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit </li>
+                <li class="list-teachers__item-info">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item">
+            <h3 class="list-teachers__item-title">Анна Павлова1</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit1</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer1</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit 1</li>
+                <li class="list-teachers__item-info">Опыт — 6 лет 1</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item">
+            <h3 class="list-teachers__item-title">Алексей Лавров 1</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer 1</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit 1</li>
+                <li class="list-teachers__item-info">Опыт — 6 лет 1</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item">
+            <h3 class="list-teachers__item-title">Александр Пашков 1</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer 1</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit 1</li>
+                <li class="list-teachers__item-info">Опыт — 6 лет 1</li>
+              </ul>
+            </div>
+          </li>
+          <li class="list-teachers__item">
+            <h3 class="list-teachers__item-title">Мария Кетова 1</h3>
+            <div class="list-teachers__item-hover">
+              <span class="list-teachers__item-firm">CrossFit 1</span>
+              <ul class="list-teachers__item-list">
+                <li class="list-teachers__item-info">Certified Level 3 Trainer 1</li>
+                <li class="list-teachers__item-info">Победитель чемпионата России по CrossFit 1</li>
+                <li class="list-teachers__item-info">Опыт — 6 лет 1</li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        <button type="button" class="trainers__button trainers__button--left">
+          <span class="visually-hidden">Налево</span>
+          <svg class="trainers__button-svg" width="18" height="34">
+            <use xlink:href="img/sprite.svg#arrowleft"></use>
+          </svg>
+        </button>
+        <button type="button" class="trainers__button trainers__button--right">
+          <span class="visually-hidden">Направо</span>
+          <svg class="trainers__button-svg" width="18" height="34">
+            <use xlink:href="img/sprite.svg#arrowright"></use>
+          </svg>
+        </button>
       </div>
     </section>
   </main>
@@ -195,6 +302,10 @@
   <script src="js/scroll.js">
   </script>
   <script src="js/tabs-subscription.js">
+  </script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js/slider-trainers.js">
   </script>
 </body>
 </html>
