--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
   <meta name="author" content="Liga A">
   <title>Sypergym</title>
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" href="slick/slick.css"/>
+  <link rel="stylesheet" href="slick/slick-theme.css"/>
   <link rel="preload" href="fonts/BebasNeue-Bold.woff2">
   <link rel="preload" href="fonts/BebasNeue-Regular.woff2">
   <link rel="preload" href="fonts/RobotoCondensed-Bold.woff2">
@@ -308,7 +308,7 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
-    <script type="text/javascript" src="js/slider-trainers.js">
+  <script type="text/javascript" src="js/slider-trainers.js">
   </script>
 </body>
 </html>
