--- a/source/index.html
+++ b/source/index.html
@@ -202,6 +202,7 @@
                 <li class="list-teachers__item-info">Опыт — 6 лет</li>
               </ul>
             </div>
+            <img class="list-teachers__img-bg" src="img/foto-trainer-one.png" alt="Фон карточки">
           </div>
           <div class="list-teachers__item list-teachers__item--two" >
             <h3 class="list-teachers__item-title">Алексей Лавров</h3>
@@ -213,6 +214,7 @@
                 <li class="list-teachers__item-info">Опыт — 6 лет</li>
               </ul>
             </div>
+            <img class="list-teachers__img-bg" src="img/foto-trainer-two.png" alt="Фон карточки">
           </div>
           <div class="list-teachers__item list-teachers__item--three">
             <h3 class="list-teachers__item-title">Александр Пашков</h3>
@@ -224,6 +226,7 @@
                 <li class="list-teachers__item-info">Опыт — 6 лет</li>
               </ul>
             </div>
+            <img class="list-teachers__img-bg" src="img/foto-trainer-three.png" alt="Фон карточки">
           </div>
           <div class="list-teachers__item list-teachers__item--four">
             <h3 class="list-teachers__item-title">Мария Кетова</h3>
@@ -235,6 +238,7 @@
                 <li class="list-teachers__item-info">Опыт — 6 лет</li>
               </ul>
             </div>
+            <img class="list-teachers__img-bg" src="img/foto-trainer-four.png" alt="Фон карточки">
           </div>
           <div class="list-teachers__item list-teachers__item--one">
             <h3 class="list-teachers__item-title">Анна Павлова1</h3>
